--- a/Calificaciones y promedio.ipynb
+++ b/Calificaciones y promedio.ipynb
@@ -5,7 +5,7 @@
    "id": "61865a0c",
    "metadata": {},
    "source": [
-    "🔹 Desafío 1: Calificaciones aprobadas\n",
+    "Desafío 1: Calificaciones aprobadas\n",
     "Contar cuántos estudiantes aprobaron y cuántos no, considerando 7 como nota mínima de aprobación. \n",
     "Usándo condicionales para resolver el problema.\n",
     "\n",
@@ -111,6 +111,14 @@
     "\n",
     "# Llamada a la función para ejecutar el cálculo\n",
     "calcular_promedio_desde_string()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d768415",
+   "metadata": {},
+   "source": [
+    "https://github.com/MiriamCeciliaAlves/Calificaciones-y-promedios"
    ]
   }
  ],
